[gd_scene load_steps=17 format=3 uid="uid://d2o0s3qn8v70o"]

[ext_resource type="Script" path="res://scenes/matches/matches_item.gd" id="1_anwtr"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="2_3q4ai"]
[ext_resource type="PackedScene" uid="uid://dj6q8o76cf5vf" path="res://scenes/ui_elements/glass_panel_element_odd.tscn" id="2_u82bc"]
[ext_resource type="PackedScene" uid="uid://d3o4oipt5jw2b" path="res://scenes/ui_elements/glass_panel_element_even.tscn" id="3_6myts"]
[ext_resource type="Texture2D" uid="uid://ctu1miqp425c5" path="res://assets/gui/icons/casette.png" id="3_s7kml"]
[ext_resource type="FontFile" uid="uid://df06bw7a1s1u7" path="res://fonts/Montserrat-Bold.ttf" id="4_7gtxg"]
[ext_resource type="Texture2D" uid="uid://bkl735o4now4n" path="res://assets/gui/icons/locked.png" id="7_1n6sd"]
[ext_resource type="Script" path="res://scenes/matches/players_count_label.gd" id="8_rken6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnxlh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ukgxa"]
content_margin_left = 25.0
content_margin_right = 25.0

[sub_resource type="LabelSettings" id="LabelSettings_fkm56"]
line_spacing = 0.0
font = ExtResource("2_3q4ai")
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_owifg"]
font = ExtResource("4_7gtxg")

[sub_resource type="LabelSettings" id="LabelSettings_dqhvv"]
line_spacing = 0.0
font = ExtResource("4_7gtxg")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j36lc"]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id="Gradient_i41yu"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.811765, 0.8, 0.992157, 0, 0.811765, 0.8, 0.992157, 0.219608, 0.811765, 0.8, 0.992157, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pbh36"]
gradient = SubResource("Gradient_i41yu")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="MatchesItem" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
size_flags_horizontal = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bnxlh")
script = ExtResource("1_anwtr")

[node name="OddPanel" parent="." instance=ExtResource("2_u82bc")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="EvenPanel" parent="." instance=ExtResource("3_6myts")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NumberLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_ukgxa")
text = "01"
label_settings = SubResource("LabelSettings_fkm56")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvatarImage" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_s7kml")
expand_mode = 3
stretch_mode = 5

[node name="Details" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer/Details"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Game Name"
label_settings = SubResource("LabelSettings_owifg")

[node name="InstrumentLabel" type="Label" parent="VBoxContainer/HBoxContainer/Details"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.478431, 0.458824, 1, 1)
theme_override_fonts/font = ExtResource("4_7gtxg")
text = "Instrument Name"

[node name="SongLabel" type="Label" parent="VBoxContainer/HBoxContainer/Details"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.988235, 0, 0.466667, 1)
text = "Song Name"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="GameStatusLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[right][/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="LockedIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Password protected"
texture = ExtResource("7_1n6sd")
expand_mode = 5
stretch_mode = 5

[node name="PlayersCountLabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"matches_item_pc_label"
text = "0"
label_settings = SubResource("LabelSettings_dqhvv")
horizontal_alignment = 1
script = ExtResource("8_rken6")

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
mouse_filter = 1

[node name="FocusOverlay" type="TextureRect" parent="."]
unique_name_in_owner = true
show_behind_parent = true
material = SubResource("CanvasItemMaterial_j36lc")
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_pbh36")
